# domain_utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  package-lock.json  package.json
scripts/git/hooks/pre-commit/: rustfmt.sh
src/: entity.rs  id.rs  lib.rs
